--- a/React/newsmanage/src/App.css
+++ b/React/newsmanage/src/App.css
@@ -3,3 +3,12 @@
 #root, .ant-layout{
   height: 100%;
 }
+::-webkit-scrollbar {width:5px;height:5px;position:absolute;}
+::-webkit-scrollbar-thumb {
+  background-color:#919395;
+  border-radius: 2px;
+}
+::-webkit-scrollbar-track {
+  background-color:#ddd;
+  border-radius: 2px;
+}
